[package]
name = "n3x-nostr-derisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

strum = "0.24"
strum_macros = "0.24"

nostr-sdk = { git = "https://github.com/rust-nostr/nostr" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }